replace css to tailwind

--- a/src/features/RecipeForm/RecipeForm.module.css
+++ b/src/features/RecipeForm/RecipeForm.module.css
@@ -1,4 +1,4 @@
-.category {
+/* .category {
   margin-top: 10px;
   font-weight: bold;
   padding-bottom: 10px;
@@ -62,4 +62,4 @@
 
 .notes {
   min-width: none;
-}
+} */
