--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 html,
 body {
   height: 100%;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 
 #root {
@@ -53,5 +53,50 @@ body {
 
   button {
     @apply cursor-pointer;
+  }
+}
+
+@layer components {
+  .btn {
+    @apply inline-flex items-center justify-center border rounded-lg px-3 py-1.5 text-base font-medium transition
+           hover:cursor-pointer disabled:hover:cursor-not-allowed disabled:opacity-50;
+  }
+
+  .btn-primary {
+    @apply border-transparent bg-teal-400 text-black hover:bg-teal-500;
+  }
+
+  .btn-secondary {
+    @apply border border-gray-400 text-gray-800 bg-white hover:bg-gray-100;
+  }
+
+  .btn-danger {
+    @apply border-transparent bg-red-600 text-white hover:bg-red-700;
+  }
+
+  .card {
+    /* @apply rounded-2xl shadow-md bg-white p-4; */
+    @apply text-left bg-white border border-gray-300 rounded-lg overflow-hidden flex flex-col bg-origin-border m-2.5 w-[250px];
+  }
+
+  .formElement {
+    /* @apply w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none; */
+    @apply block min-w-0 grow py-1.5 pr-3 pl-1 text-base text-gray-900 placeholder:text-gray-400 focus:outline-none sm:text-sm/6;
+  }
+
+  .formElementWrapper {
+    /* @apply w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none; */
+    @apply flex items-center rounded-md bg-white pl-3 outline outline-gray-300 transition
+           has-[input:focus-within]:outline-2 has-[input:focus-within]:outline-teal-600
+           has-[textarea:focus-within]:outline-2 has-[textarea:focus-within]:outline-teal-600
+           has-[select:focus-within]:outline-2 has-[select:focus-within]:outline-teal-600;
+  }
+
+  .formElementLabel {
+    @apply block font-bold text-gray-900;
+  }
+
+  .error {
+    @apply border border-red-500 has-[input:focus-within]:outline-none;
   }
 }
